# fcitx-googlepinyin

./: .gitignore  .hgignore  AUTHORS  CMakeLists.txt  INSTALL  README  config.h.in
cmake/: FindGooglepinyin.cmake  FindLibiconv.cmake
data/: CMakeLists.txt  fcitx-googlepinyin.conf  fcitx-googlepinyin.conf.in  fcitx-googlepinyin.desc  getdescpo  googlepinyin.conf.in
libgooglepinyin/: CMakeLists.txt
libgooglepinyin/include/: dictdef.h
libgooglepinyin/src/: CMakeLists.txt  userdict.cpp
libgooglepinyin/tools/: CMakeLists.txt  pinyinime_dictbuilder.cpp
po/: CMakeLists.txt  POTFILES.in.in  ca.po  da.po  de.po  fcitx-googlepinyin.pot  ja.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  config.cpp  eim.cpp  eim.h  fcitx-googlepinyin.conf.in
standalone/: CMakeLists.txt  main.cpp
